Fixed a lot of media queries for mobile. Last commit of the night. I need to sleep.

--- a/learncrypto.html
+++ b/learncrypto.html
@@ -63,17 +63,17 @@
         </div>
         <hr class="colored_hr">
         <div class="learn_list">
-          <div class="learn_preview" onclick="location.href='whatarenfts.html';">
+          <div class="learn_preview" onclick="location.href='whatarecryptocurrencies.html';">
             <img src="images/bitcoin.png" alt="The bitcoin logo">
             <h1>What are Cryptocurrencies?</h1>
             <a> The word "cryptocurrencies" has evolved greatly in the last 5 years and he entire cryptocurrency space has grown and expanded. Let's get a solid definition established so you know what you're getting started in. </a>
           </div>
-          <div class="learn_preview" onclick="location.href='commonnftterms.html';">
+          <div class="learn_preview" onclick="location.href='commoncryptoterms.html';">
             <img src="images/cryptoslang.png" alt="Some example crypto slang being said by a drawn man">
             <h1>Common Crypto Terms</h1>
             <a> Cryptocurrency culture has many new terms and slang you'll need to pick up on to be successful. Click here to get some good starting terms. </a>
           </div>
-          <div class="learn_preview" onclick="location.href='commonnftscams.html';">
+          <div class="learn_preview" onclick="location.href='commoncryptoscams.html';">
             <img src="images/scam.jpg" alt="A bunch of roadsigns saying SCAM on them">
             <h1>Common Crypto Scams</h1>
             <a> Cryptocurrency scams are some of the most popular scams on the internet nowadays due to the nature of blockchains. You need to be prepared for anything. Let's get you ready to face the wild west of the internet. </a>
