Finished report.html and fixed a typo.

--- a/aboutus.html
+++ b/aboutus.html
@@ -42,7 +42,7 @@
     <div class="about-section">
       <div class="who-we-are">
         <h1>Who We Are</h1>
-        <p> Cryptoed is a education site for all levels of cryptocurrency and NFT users. We provide information from just basic terms to navigating complex scams. We have been in the cryptocurrency space since 2015 and the NFT space since 2020 and we want to share our wisdom with everyone. </p>
+        <p> Crypted is a education site for all levels of cryptocurrency and NFT users. We provide information from just basic terms to navigating complex scams. We have been in the cryptocurrency space since 2015 and the NFT space since 2020 and we want to share our wisdom with everyone. </p>
       </div>
       <div class="our-vision">
         <h1>Our Vision</h1>
