--- a/report.html
+++ b/report.html
@@ -5,8 +5,232 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crypted. | Report</title>
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/report.css" />
 </head>
 <body>
-    Not finished.
+    <div class="content-div">
+        <h1>Group 3's Report - Crypted.</h1>
+        <div class="expectations">
+            <div class="expectation-item">
+                <p class="expectation">
+                    You will create a website for a client of your choosing. Your client could be a family member, a business, a student group, a friend, an online community, and so on. The only restriction is that the client cannot be just you.
+                </p>
+                <p class="explanation">
+                    Kevin got in contact with his friend's who run a NFT/cryptocurrency group and they had an idea for an introduction/educational site to onboard people.
+                </p>
+            </div>
+            <div class="expectation-item">
+                <p class="expectation">
+                    Your site's webpages must include some sort of headers.
+                </p>
+                <p class="explanation">
+                    All of our pages share a header/navbar setup. We also have an image header above articles as well.
+                </p>
+            </div>
+            <div class="expectation-item">
+                <p class="expectation">
+                    Your site must contain at least ten separate pages, each having a meaningful purpose.
+                </p>
+                <p class="explanation">
+                    We have at least ten pages made for this project. We have the:
+                    <ol>
+                        <li>
+                            Homepage
+                        </li>
+                        <li>
+                            About Us
+                        </li>
+                        <li>
+                            Contact Us
+                        </li>
+                        <li>
+                            Learn NFTs
+                        </li>
+                        <li>
+                            What are NFTs
+                        </li>
+                        <li>
+                            Common NFT Terms
+                        </li>
+                        <li>
+                            Common NFT Scams
+                        </li>
+                        <li>
+                            This Week in NFTs
+                        </li>
+                        <li>
+                            Learn Crypto
+                        </li>
+                        <li>
+                            What are Cryptocurrencies
+                        </li>
+                        <li>
+                            Common Crypto Terms
+                        </li>
+                        <li>
+                            Common Crypto Scams
+                        </li>
+                    </ol>
+                </p>
+            </div>
+            <div class="expectation-item">
+                <p class="expectation">
+                    Your site's webpages must include some sort of navigation links.
+                </p>
+                <p class="explanation">
+                    We have navigation links available at the top and bottom of all of our pages.
+                </p>
+            </div>
+            <div class="expectation-item">
+                <p class="expectation">
+                    Your site must support distinct layouts for large and small screens. For instance, multicolumn layouts on large screens should be reduced to single column layouts on small screens. You are encouraged to implement separate layouts using CSS media queries.
+                </p>
+                <p class="explanation">
+                    Our site collapses and expands to fit all screen sizes in many areas. The homepage main icons collapse into a column, the preview images also collapse right below those icons, our footer collapses into a column as well as the navbar, the "Learn" pages also do a row -> column change. We have plenty of examples.
+                </p>
+            </div>
+            <div class="expectation-item">
+                <p class="expectation">
+                    Your site must maintain a coherent style across its pages. Global style rules must be placed in a shared stylesheet. Individual pages’ style rules must be placed in a separate stylesheets.
+                </p>
+                <p class="explanation">
+                    Our site has a global style rule that is used across all pages. We also have the other page css files split into their own respective files. Some pages overlap, but most are unique per page.
+                </p>
+            </div>
+            <div class="expectation-item">
+                <p class="expectation">
+                    Your site must include images, and their alt attributes must adequately describe the image content to users of screen readers, user with images disabled, and webcrawlers.
+                </p>
+                <p class="explanation">
+                    All images on our site have an alt attribute applied to them. It took a while...
+                </p>
+            </div>
+            <div class="expectation-item">
+                <p class="expectation">
+                    Each page must declare its favicon.
+                </p>
+                <p class="explanation">
+                    We've got a favicon declared for all pages.
+                </p>
+            </div>
+            <div class="expectation-item">
+                <p class="expectation">
+                    Your site’s non-HTML resources must be organized. Images must be placed in a directory named images. CSS files must be placed in a directory named css. 
+                </p>
+                <p class="explanation">
+                We've got our directories split up into /css and /images as asked.
+                </p>
+            </div>
+            <div class="expectation-item">
+                <p class="expectation">
+                    Your site must not be built using any libraries or frameworks. Do not use Bootstrap, jQuery, React, Angular, Vue, or any other third-party tools. You may, however, reimplement the ideas you see in these third-party tools.
+                </p>
+                <p class="explanation">
+                    We have no external libraries or frameworks used.
+                </p>
+            </div>
+            <div class="expectation-item">
+                <p class="expectation">
+                    Each page and stylesheet of your site must validate without any warnings or errors using the W3C’s HTML validator and CSS validator.
+                </p>
+                <p class="explanation">
+                I ran them and they all seemed to validate correctly.
+                </p>
+            </div>
+            <div class="expectation-item">
+                <p class="expectation">
+                    Your site could be stored in a Git repository that you have shared with your instructor. On GitHub, GitLab, and Bitbucket, share with the user gomesr-uwec.(Not required for this project but recommended)
+                </p>
+                <p class="explanation">
+                We've got a Git repository on GitHub made. <a href="https://github.com/JasonYap0519/Crypted.">It is public at the time of writing.</a>
+                </p>
+            </div>
+            <div class="expectation-item">
+                <p class="expectation">
+                    The names of your files should be entirely lowercase and contain only alphanumeric characters.
+                </p>
+                <p class="explanation">
+                They all match that criteria.
+                </p>
+            </div>
+            <div class="expectation-item">
+                <p class="expectation">
+                    Your content should be neatly aligned. The axes should be clearly visible.
+                </p>
+                <p class="explanation">
+                I believe that the content is pretty well set for all the pages. Easy to follow.
+                </p>
+            </div>
+            <div class="expectation-item">
+                <p class="expectation">
+                    Your site must use at least two different font faces. Headings are often rendered in a sans-serif font.
+                </p>
+                <p class="explanation">
+                    We use two different font faces for the site.
+                    <code>
+                        * {
+                            box-sizing: border-box;
+                            font-family: "Titillium Web";
+                        }
+                    </code>
+                    <code>
+                        body {
+                            min-height: 100vh;
+                            margin: 0;
+                        }
+                        
+                        h1, h2 {
+                            font-family: "Titillium Web", sans-serif;
+                        }
+                    </code>    
+                </p>
+            </div>
+            <div class="expectation-item">
+                <p class="expectation">
+                    Your site must include links to external sites. Clicking on external links must open a new tab or window rather than replace your page.
+                </p>
+                <p class="explanation">
+                We have sources on some of our pages like external links to sources on the Common x Scams and What are x pages.
+                </p>
+            </div>
+            <div class="expectation-item">
+                <p class="expectation">
+                    Your source code must be readable, using conventional and consistent formatting and meaningful names for classes and IDs.
+                </p>
+                <p class="explanation">
+                All the files have been formatted to be easily readable. All the class names and ids are self-explanatory. 
+                </p>
+            </div>
+            <div class="expectation-item">
+                <p class="expectation">
+                    Your site's webpages should include a consistent navbar. 
+                </p>
+                <p class="explanation">
+                All pages use the exact same navbar.
+                </p>
+            </div>
+            <div class="expectation-item">
+                <p class="expectation">
+                    Your site's webpages should include some sort of header and footer section along with the navbar. 
+                </p>
+                <p class="explanation">
+                We used the same navbar div to put the site name or where a logo would go. The footer also has lots of information and navigation links.
+                </p>
+            </div>
+            <div class="expectation-item">
+                <p class="expectation">
+                    Your site's webpages should implement flexboxes/grids or a combination of both.  
+                </p>
+                <p class="explanation">
+                    We used flexboxes all over the place and the footer was made from a grid.
+                </p>
+            </div>
+        </div>
+        <div class="critique">
+            <div></div>
+            They said it was good and said once we're done with the full project and getting it to actually work, they'll set it up for the group to use. They asked for a couple changes along the way, so it's pretty much how they wanted it.
+        </div>
+    </div>
 </body>
 </html>
